// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Basic functionality: Textarea has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "children": "textarea value",
  "disabled": false,
  "id": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [MockFunction],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onKeyUp": [Function],
  "placeholder": "Placeholder",
  "rows": 3,
  "styled-component": "true",
  "type": "textarea",
  "value": "textarea value",
}
`;

exports[`Textarea Basic functionality: textarea renders BaseInput with correct props passed 1`] = `
Object {
  "adjoined": "none",
  "aria-describedby": null,
  "aria-label": null,
  "aria-labelledby": null,
  "autoFocus": false,
  "disabled": false,
  "error": false,
  "inputRef": Object {
    "current": null,
  },
  "name": "",
  "onBlur": [MockFunction],
  "onChange": [MockFunction],
  "onFocus": [MockFunction],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onKeyUp": [Function],
  "overrides": Object {
    "Input": Object {
      "component": [Function],
    },
    "InputContainer": Object {
      "component": [Function],
    },
  },
  "placeholder": "Placeholder",
  "required": false,
  "rows": 3,
  "size": "default",
  "type": "textarea",
  "value": "textarea value",
}
`;

exports[`Textarea With component overrides: components overrides get passed to the BaseInput 1`] = `
Object {
  "adjoined": "none",
  "aria-describedby": null,
  "aria-label": null,
  "aria-labelledby": null,
  "autoFocus": false,
  "disabled": false,
  "error": false,
  "inputRef": Object {
    "current": null,
  },
  "name": "",
  "onBlur": [MockFunction],
  "onChange": [MockFunction],
  "onFocus": [MockFunction],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onKeyUp": [Function],
  "overrides": Object {
    "Input": Object {
      "component": [Function],
    },
    "InputContainer": Object {
      "component": [Function],
    },
  },
  "placeholder": "Placeholder",
  "required": false,
  "rows": 3,
  "size": "default",
  "type": "textarea",
  "value": "textarea value",
}
`;
